--- a/index.html
+++ b/index.html
@@ -1,88 +1,356 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Bootstrap demo</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles.css">
-</head>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="styles.css" />
+  </head>
   <body>
-   
     <!-- Barra de navegación -->
-     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#"><img src="img/logo.png" alt="" class="logo">Sazón Jaguero</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Inicio</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Menú</a>
-        </li>
-        
-        <li class="nav-item">
-          <a class="nav-link" href="#">Contacto</a>
-        </li>
-      </ul>
-      <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search"/>
-        <button class="btn btn-outline-success" type="submit">Buscar</button>
-      </form>
-    </div>
-  </div>
-</nav>
-<!-- Fin barra de navegación -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#"
+          ><img
+            src="https://img.icons8.com/ios-filled/50/ffffff/restaurant.png"
+            alt="Logo Restaurante"
+            width="32"
+            height="32"
+            class="me-2"
+          />Sazón Jaguero</a
+        >
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Menú</a>
+            </li>
 
+            <li class="nav-item">
+              <a class="nav-link" href="#">Contacto</a>
+            </li>
+          </ul>
+          <form class="d-flex" role="search">
+            <input
+              class="form-control me-2"
+              type="search"
+              placeholder="Buscar"
+              aria-label="Search"
+            />
+            <button class="btn btn-outline-success" type="submit">
+              Buscar
+            </button>
+          </form>
+        </div>
+      </div>
+    </nav>
+    <!-- Fin barra de navegación -->
 
-<!-- Carrusel -->
+    <!-- Carrusel -->
 
-<div id="restaurantCarousel" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-indicators">
-        <button type="button" data-bs-target="#restaurantCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-        <button type="button" data-bs-target="#restaurantCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
-        <button type="button" data-bs-target="#restaurantCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
-    </div>
-    <div class="carousel-inner">
+    <div id="restaurantCarousel" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-indicators">
+        <button
+          type="button"
+          data-bs-target="#restaurantCarousel"
+          data-bs-slide-to="0"
+          class="active"
+          aria-current="true"
+          aria-label="Slide 1"
+        ></button>
+        <button
+          type="button"
+          data-bs-target="#restaurantCarousel"
+          data-bs-slide-to="1"
+          aria-label="Slide 2"
+        ></button>
+        <button
+          type="button"
+          data-bs-target="#restaurantCarousel"
+          data-bs-slide-to="2"
+          aria-label="Slide 3"
+        ></button>
+      </div>
+      <div class="carousel-inner">
         <div class="carousel-item active">
-            <img src="img//imagen1.jpg" class="d-block w-100" alt="Ambiente del restaurante">
-            <div class="carousel-caption d-none d-md-block">
-                <h5>Ambiente Acogedor</h5>
-                <p>Disfruta de un espacio cómodo y familiar.</p>
-            </div>
+          <img
+            src="img//imagen1.jpg"
+            class="d-block w-100"
+            alt="Ambiente del restaurante"
+            style="height: 400px; object-fit: cover"
+          />
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Ambiente Acogedor</h5>
+            <p>Disfruta de un espacio cómodo y familiar.</p>
+          </div>
         </div>
         <div class="carousel-item">
-            <img src="img/imagen2.jpg" class="d-block w-100" alt="Plato típico">
-            <div class="carousel-caption d-none d-md-block">
-                <h5>Platos Típicos</h5>
-                <p>Sabores auténticos de la región.</p>
-            </div>
+          <img
+            src="img/imagen2.jpg"
+            class="d-block w-100"
+            alt="Plato típico"
+            style="height: 400px; object-fit: cover"
+          />
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Platos Típicos</h5>
+            <p>Sabores auténticos de la región.</p>
+          </div>
         </div>
         <div class="carousel-item">
-            <img src="img/imagen3.jpg" class="d-block w-100" alt="Equipo de cocina">
-            <div class="carousel-caption d-none d-md-block">
-                <h5>Equipo Profesional</h5>
-                <p>Personal capacitado para brindarte el mejor servicio.</p>
-            </div>
+          <img
+            src="img/imagen3.jpg"
+            class="d-block w-100"
+            alt="Equipo de cocina"
+            style="height: 400px; object-fit: cover"
+          />
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Equipo Profesional</h5>
+            <p>Personal capacitado para brindarte el mejor servicio.</p>
+          </div>
         </div>
-    </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#restaurantCarousel" data-bs-slide="prev">
+      </div>
+      <button
+        class="carousel-control-prev"
+        type="button"
+        data-bs-target="#restaurantCarousel"
+        data-bs-slide="prev"
+      >
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Anterior</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#restaurantCarousel" data-bs-slide="next">
+      </button>
+      <button
+        class="carousel-control-next"
+        type="button"
+        data-bs-target="#restaurantCarousel"
+        data-bs-slide="next"
+      >
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Siguiente</span>
-    </button>
-</div>
+      </button>
+    </div>
 
+    <!-- Tarjetas Mejoradas -->
+    <section id="menu" class="py-5 bg-light">
+      <div class="container">
+        <h2 class="text-center mb-5 display-5 fw-bold text-primary">
+          Nuestro Menú Destacado
+        </h2>
+        <div class="row g-4 justify-content-center">
+          <!-- Tarjeta 1 -->
+          <div class="col-md-6 col-lg-4">
+            <div class="card h-100 shadow border-0 rounded-4 overflow-hidden">
+              <img
+                src="img/pizza.jpg"
+                class="card-img-top"
+                alt="Pizza Pepperoni"
+                style="height: 220px; object-fit: cover"
+              />
+              <div class="card-body">
+                <h5 class="card-title fw-bold text-secondary">
+                  Pizza Pepperoni
+                </h5>
+                <!-- Valoración estrellas -->
+                <div class="mb-2 text-warning">
+                  <span class="fs-5">&#9733;&#9733;&#9733;&#9733;&#9734;</span>
+                  <span class="text-muted small">(4.0)</span>
+                </div>
+                <div class="mb-2">
+                  <span class="badge bg-danger text-white me-2">
+                    <span class="text-decoration-line-through">$30.000</span>
+                  </span>
+                  <span class="badge bg-success text-white"> $25.000 </span>
+                </div>
+                <p class="card-text small">
+                  Deliciosa pizza italiana con tomate, mozzarella fresca y hojas
+                  de albahaca.
+                </p>
+              </div>
+              <div class="card-footer bg-white border-0 text-center">
+                <a href="#" class="btn btn-outline-primary rounded-pill px-4"
+                  >Ver más</a
+                >
+              </div>
+            </div>
+          </div>
+          <!-- Tarjeta 2 -->
+          <div class="col-md-6 col-lg-4">
+            <div class="card h-100 shadow border-0 rounded-4 overflow-hidden">
+              <img
+                src="img/hamburguesa.jpg"
+                class="card-img-top"
+                alt="Hamburguesa"
+                style="height: 220px; object-fit: cover"
+              />
+              <div class="card-body">
+                <h5 class="card-title fw-bold text-secondary">
+                  Hamburguesa Clásica
+                </h5>
+                <!-- Valoración estrellas -->
+                <div class="mb-2 text-warning">
+                  <span class="fs-5">&#9733;&#9733;&#9733;&#9733;&#9733;</span>
+                  <span class="text-muted small">(5.0)</span>
+                </div>
+                <div class="mb-2">
+                  <span class="badge bg-danger text-white me-2">
+                    <span class="text-decoration-line-through">$22.000</span>
+                  </span>
+                  <span class="badge bg-success text-white"> $18.000 </span>
+                </div>
+                <p class="card-text small">
+                  Jugosa hamburguesa de res con queso cheddar, lechuga y tomate
+                  fresco.
+                </p>
+              </div>
+              <div class="card-footer bg-white border-0 text-center">
+                <a href="#" class="btn btn-outline-primary rounded-pill px-4"
+                  >Ver más</a
+                >
+              </div>
+            </div>
+          </div>
+          <!-- Tarjeta 3 -->
+          <div class="col-md-6 col-lg-4">
+            <div class="card h-100 shadow border-0 rounded-4 overflow-hidden">
+              <img
+                src="img/ensalada.jpg"
+                class="card-img-top"
+                alt="Ensalada César"
+                style="height: 220px; object-fit: cover"
+              />
+              <div class="card-body">
+                <h5 class="card-title fw-bold text-secondary">
+                  Ensalada César
+                </h5>
+                <!-- Valoración estrellas -->
+                <div class="mb-2 text-warning">
+                  <span class="fs-5">&#9733;&#9733;&#9733;&#9733;&#9734;</span>
+                  <span class="text-muted small">(4.0)</span>
+                </div>
+                <div class="mb-2">
+                  <span class="badge bg-danger text-white me-2">
+                    <span class="text-decoration-line-through">$15.000</span>
+                  </span>
+                  <span class="badge bg-success text-white"> $12.000 </span>
+                </div>
+                <p class="card-text small">
+                  Ensalada fresca con pollo a la parrilla, crutones y aderezo
+                  César.
+                </p>
+              </div>
+              <div class="card-footer bg-white border-0 text-center">
+                <a href="#" class="btn btn-outline-primary rounded-pill px-4"
+                  >Ver más</a
+                >
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
+    <!-- Formulario -->
+    <section id="contacto" class="py-5" style="background-color: black">
+      <div class="container">
+        <h2 class="text-center mb-4 display-6 fw-bold text-white">
+          Contáctanos
+        </h2>
+        <div class="row justify-content-center align-items-center">
+          <!-- Imagen decorativa mejorada -->
+          <div class="col-lg-5 mb-4 mb-lg-0 text-center">
+            <div class="position-relative d-inline-block">
+                <img
+                src="https://images.unsplash.com/photo-1504674900247-0877df9cc836?auto=format&fit=crop&w=600&q=80"
+                alt="Fondo restaurante acogedor"
+                class="img-fluid w-100 h-100 rounded-4 shadow-lg border border-3 border-primary"
+                style="object-fit: cover; max-height: 340px;"
+                />
+              <img
+                src="https://img.icons8.com/ios-filled/50/ffffff/restaurant.png"
+                alt="Decoración"
+                class="position-absolute top-0 start-0 translate-middle rounded-circle bg-primary p-2 shadow"
+                style="width: 56px; height: 56px; z-index: 2"
+              />
+            </div>
+            <p class="mt-3 text-danger fst-italic fw-bold"></p>
+              ¡Estamos listos para atenderte!
+            </p>
+          </div>
+          <!-- Formulario mejorado -->
+          <div class="col-lg-6">
+            <form class="bg-light p-4 rounded-4 shadow-sm border">
+              <div class="mb-3">
+                <label for="nombre" class="form-label fw-semibold"
+                  >Nombre</label
+                >
+                <input
+                  type="text"
+                  class="form-control"
+                  id="nombre"
+                  placeholder="Tu nombre"
+                  required
+                />
+              </div>
+              <div class="mb-3">
+                <label for="email" class="form-label fw-semibold"
+                  >Correo electrónico</label
+                >
+                <input
+                  type="email"
+                  class="form-control"
+                  id="email"
+                  placeholder="nombre@ejemplo.com"
+                  required
+                />
+              </div>
+              <div class="mb-3">
+                <label for="mensaje" class="form-label fw-semibold"
+                  >Mensaje</label
+                >
+                <textarea
+                  class="form-control"
+                  id="mensaje"
+                  rows="4"
+                  placeholder="Escribe tu mensaje aquí..."
+                  required
+                ></textarea>
+              </div>
+              <div class="d-grid">
+                <button
+                  type="submit"
+                  class="btn btn-primary rounded-pill fs-5 py-2"
+                >
+                  <span class="me-2">&#9993;</span>Enviar mensaje
+                </button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </section>
 
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
